--- a/Camper_Cafe Menu/styles.css
+++ b/Camper_Cafe Menu/styles.css
@@ -4,13 +4,31 @@ h1, h2, p {
 
 body {
     background-image: url(https://cdn.freecodecamp.org/curriculum/css-cafe/beans.jpg);
+    font-family: sans-serif;
   } 
+
+.established {
+    font-style: italic;
+  }  
+
+h1, h2 {
+    font-family: Impact, serif;
+  }
+  
+h1 {
+    font-size: 40px;
+  } 
+  
+h2 {
+    font-size: 30px;
+  }   
 
 .menu {
     width: 80%;
     background-color: burlywood;
     margin-left: auto;
     margin-right: auto;
+    max-width: 500px;
   }  
 
 .item p {
