--- a/Camper_Cafe Menu/styles.css
+++ b/Camper_Cafe Menu/styles.css
@@ -5,6 +5,7 @@ h1, h2, p {
 body {
     background-image: url(https://cdn.freecodecamp.org/curriculum/css-cafe/beans.jpg);
     font-family: sans-serif;
+    padding: 20px;
   } 
 
 .established {
@@ -50,5 +51,31 @@ hr {
   height: 2px;
   background-color: brown;
   border-color: brown;
+}
+
+/* FOOTER */
+
+footer {
+  font-size: 14px;
+}
+
+.address {
+  margin-bottom: 5px;
+}
+
+a {
+  color: black;
+}
+
+a:visited {
+  color: black;
+}
+
+a:hover {
+  color: brown;
+}
+
+a:active {
+  color: brown;
 }
  
